[gd_scene load_steps=33 format=2]

[ext_resource path="res://Jogo/resources/Pumpkin_2.tres" type="Texture" id=1]
[ext_resource path="res://Jogo/resources/Pumpkin_1.tres" type="Texture" id=2]
[ext_resource path="res://Jogo/resources/Pumpkin_0.tres" type="Texture" id=3]
[ext_resource path="res://Jogo/resources/Pumpkin_3.tres" type="Texture" id=4]
[ext_resource path="res://Jogo/resources/Pumpkin_5.tres" type="Texture" id=5]
[ext_resource path="res://Jogo/resources/Pumpkin_4.tres" type="Texture" id=6]
[ext_resource path="res://Jogo/resources/Pumpkin_Top_7.tres" type="Texture" id=7]
[ext_resource path="res://Jogo/resources/Pumpkin_Top_6.tres" type="Texture" id=8]
[ext_resource path="res://Jogo/resources/Pumpkin_Top_3.tres" type="Texture" id=9]
[ext_resource path="res://Jogo/resources/Pumpkin_Top_1.tres" type="Texture" id=10]
[ext_resource path="res://Jogo/resources/Pumpkin_Top_0.tres" type="Texture" id=11]
[ext_resource path="res://Jogo/resources/Pumpkin_Top_4.tres" type="Texture" id=12]
[ext_resource path="res://Jogo/resources/Pumpkin_Top_2.tres" type="Texture" id=13]
[ext_resource path="res://Jogo/resources/Pumpkin_Top_5.tres" type="Texture" id=14]
[ext_resource path="res://Jogo/resources/Pumpkin_Back_1.tres" type="Texture" id=15]
[ext_resource path="res://Jogo/resources/Pumpkin_Back_0.tres" type="Texture" id=16]
[ext_resource path="res://Jogo/resources/Pumpkin_Back_2.tres" type="Texture" id=17]
[ext_resource path="res://Jogo/resources/Pumpkin_Back_6.tres" type="Texture" id=18]
[ext_resource path="res://Jogo/resources/Pumpkin_Back_4.tres" type="Texture" id=19]
[ext_resource path="res://Jogo/resources/Pumpkin_Back_5.tres" type="Texture" id=20]
[ext_resource path="res://Jogo/resources/Pumpkin_Back_3.tres" type="Texture" id=21]
[ext_resource path="res://Jogo/Inimigo.gd" type="Script" id=22]
[ext_resource path="res://Jogo/quest 2 - assets/topdown_shooter/other/explode2.png" type="Texture" id=23]
[ext_resource path="res://Jogo/quest 2 - assets/sons/Defeat.wav" type="AudioStream" id=24]
[ext_resource path="res://Jogo/quest 2 - assets/sons/DAFlailHit.wav" type="AudioStream" id=25]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 7 )
region = Rect2( 406, 116, 39, 27 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 23 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 23 )
region = Rect2( 12, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 23 )
region = Rect2( 24, 0, 12, 12 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 13 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "Walk_Top",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 18 ) ],
"loop": true,
"name": "Walk_Back",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 21.5926

[sub_resource type="CapsuleShape2D" id=7]

[node name="Pumpkin" type="KinematicBody2D" groups=[
"Inimigo",
]]
script = ExtResource( 22 )

[node name="SpriteInimigo" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "Death"
frame = 4
playing = true

[node name="AreaColisao" type="Area2D" parent="."]

[node name="ColisaoInimigo" type="CollisionShape2D" parent="AreaColisao"]
shape = SubResource( 6 )

[node name="ColisaoInimigo" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )

[node name="Dead" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )

[connection signal="animation_finished" from="SpriteInimigo" to="." method="_on_SpriteInimigo_animation_finished"]
[connection signal="body_entered" from="AreaColisao" to="." method="_on_AreaColisao_body_entered"]
